Fixed image in profile page on mobile

--- a/cmsocial-web/styles/main.less
+++ b/cmsocial-web/styles/main.less
@@ -275,8 +275,6 @@ ul.nav-tabs > li > a {
 }
 
 .avatar {
-  width: 200px;
-  height: 200px;
   display: block;
 }
 
